--- a/styles/position-exercise.html
+++ b/styles/position-exercise.html
@@ -17,22 +17,18 @@
   <link rel="stylesheet" type="text/css" href="styles/position-page.css">
 </head>
 <body>
-  <img src="images/outerspace_landscape.jpeg" id="bg" alt="">
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
   <nav>
-    <img src="images/icon.png" class="cat-logo">
-      <div class="links"> 
-        <a href="index.html">Home</a>
-        <a href="display-exercise.html">display</a>
-        <a href="float-exercise.html">float</a>
-      </div>
+    <img src="images/icon.png">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="display-exercise.html">display</a></li>
+      <li><a href="float-exercise.html">float</a></li>
+    </ul>
   </nav>
 
   <main>
-    <div class="green-box">
-      <img src="https://github.com/meron93/css_layout_exercises_starter_files/blob/master/images/spacecat.png?raw=true" class="space-cat">
-      <img src="https://github.com/meron93/css_layout_exercises_starter_files/blob/master/images/spacedog.png?raw=true" class="space-dog">
-    </div>
+    <!-- Put the HTML you need to accomplish the design -->
   </main>
 </body>
 </html>
